# testing-repository

./: .gitignore  .gitmodules  README.Gtkmm3  README.md  README.xerelease  README.xerelease-gtk3  cairo_scale.py  clean_cache.cmd  clean_cache.sh  fuse-ext2.sh  mount_ext4.sh  vscode-background.sh  vscode_rust.desktop  xerelease.cpp  xerelease3.c
Gtk2/: test.c
Gtk2.24/: README.GTK2  gtk1.cpp  gtk2.cpp
Gtk3/: README.Gtk3  icon.rc  launch.cmd
Gtk3/gtk112_file_exp/: CMakeLists.txt  meson.build
Gtk3/gtk112_file_exp/res/: gtk112.gresource.xml
Gtk3/gtk112_file_exp/src/: FileWindow.cpp  FileWindow.h  main.cpp
Gtk3/gtk117_webkitgtk/: CMakeLists.txt
Gtk3/gtk117_webkitgtk/src/: main.cpp
Gtk3/gtk69_Ui3_test/: CMakeLists.txt  win1.xcf  winsize.conf
Gtk3/gtk69_Ui3_test/res/: compile-resource.sh  gtk69.gresource.xml  win1.ui  win1.ui~  window.ui  window.ui~  winsize.ui  winsize.ui~
Gtk3/gtk69_Ui3_test/src/: main.cpp  resources.7z  winconf.cpp  winconf.h
Gtk4/: img7.xpm  visual-studio-code.desktop
Gtk4/gtk107_text_gtk4/: meson.build
Gtk4/gtk107_text_gtk4/res/: app-menu.ui  gtk107.gresource.xml  prefs.ui  window.ui
Gtk4/gtk107_text_gtk4/src/: MyDialog.cpp  MyDialog.h  main.cpp  myapplication.cpp  myapplication.h  myprefs.cpp  mywindow.cpp
Gtk4/gtk114_UI4_test/: CMakeLists.txt
Gtk4/gtk114_UI4_test/src/: main.cpp
Gtk4/gtk147_file_exp2/: CMakeLists.txt
Gtk4/gtk147_file_exp2/cambalache/: window.cmb
Gtk4/gtk147_file_exp2/src/: FileManager.cpp  FileManager.h  main.cpp
Gtk4/gtk153_time_reminder/: CMakeLists.txt  README
Gtk4/gtk153_time_reminder/.cache/clangd/index/: MyMsgBox.cpp.A078D0BAC5464200.idx  MyMsgBox.h.DBAFD4D3862C4FAF.idx  MyPrefs.cpp.2277B14B9BB54D26.idx  MyPrefs.h.D473F5F975C67841.idx  MyReminder.cpp.E08169A193156C19.idx  MyReminder.h.0C54BFDACB78E2A4.idx  config.h.E7E093C57F2C3AAE.idx  main.cpp.9948D63AEACFBBF3.idx  timer.cpp.D212B5E528EC706C.idx  timer.h.24B9AD787E49979E.idx
Gtk4/gtk153_time_reminder/src/: MyMsgBox.cpp  MyMsgBox.h  MyPrefs.cpp  MyPrefs.h  MyReminder.cpp  MyReminder.h  config.h  main.cpp  timer.cpp  timer.h
Gtk4/gtk160_wayland_test/: CMakeLists.txt
Gtk4/gtk160_wayland_test/res/: style.css  title_style.css
Gtk4/gtk160_wayland_test/src/: MainWin.cpp  MainWin.h  MyTitleBar.cpp  MyTitleBar.h  TestWin.cpp  TestWin.h  main.cpp
Gtkmm3/: image_types.hh  text_types.hh  vs2019.7z
Gtkmm3/gtk102_configs/: meson.build
Gtkmm3/gtk102_configs/src/: MyWin.cc  MyWin.hh
Gtkmm3/gtk103_cfgtest2/: meson.build
Gtkmm3/gtk103_cfgtest2/src/: MyWin.cc  MyWin.hh  SetDialog.cc  SetDialog.hh
Gtkmm3/gtk108_settings/: meson.build  org.gtk.daleclack.gschema.xml
Gtkmm3/gtk108_settings/res/: gtk108.resource.xml  prefs.ui  window.ui
Gtkmm3/gtk108_settings/src/: MyPrefs.cc  MyPrefs.hh  MyWin.cc  MyWin.hh  main.cc
Gtkmm3/gtk113_file_gtkmm/: CMakeLists.txt  meson.build
Gtkmm3/gtk113_file_gtkmm/src/: FileWindow.cc  FileWindow.hh  main.cc
Gtkmm3/gtk122_backprefs/: CMakeLists.txt
Gtkmm3/gtk122_backprefs/src/: MyPrefs.cc  MyPrefs.hh  MyWin.cc  main.cc
Gtkmm3/gtk125_backprefs3/: meson.build
Gtkmm3/gtk125_backprefs3/cmake_backup/: CMakeLists.txt
Gtkmm3/gtk125_backprefs3/po/: LINGUAS  POTFILES.in  meson.build  my-strings.po  zh_CN.po
Gtkmm3/gtk125_backprefs3/res/: gtk125.gresource.xml
Gtkmm3/gtk125_backprefs3/src/: MyPrefs.hh  MyWin.cc  main.cc
Gtkmm3/gtk132_editor2/: CMakeLists.txt
Gtkmm3/gtk132_editor2/src/: TextEditor.cc  TextEditor.hh  main.cc
Gtkmm3/gtk77_paned/: CMakeLists.txt
Gtkmm3/gtk77_paned/src/: GtkWin.cc  GtkWin.hh  main.cc
Gtkmm3/gtk84_grid/: CMakeLists.txt  build_mingw.cmd
Gtkmm3/gtk84_grid/src/: MyWin.hh
Gtkmm3/gtk90_css_test/: CMakeLists.txt  meson.build
Gtkmm3/gtk90_css_test/res/: compile-resource.sh
Gtkmm3/gtk90_css_test/src/: main.cc
Gtkmm3/gtk97_drawing/: meson.build
Gtkmm3/gtk97_drawing/src/: main.cc
Gtkmm3/gtk99_clock/: meson.build
Gtkmm3/gtk99_clock/src/: Clock.cc  Clock.hh  main.cc
Gtkmm4/: winpe.xpm
Gtkmm4/gtk163_gtkui8_a2/: CMakeLists.txt
Gtkmm4/gtk163_gtkui8_a2/res/cambalache/: findermenu.ui  mainwin.cmb  mainwin.ui  mypanel.ui  overlaywin.ui
Gtkmm4/gtk163_gtkui8_a2/src/: MainWin.cc  MainWin.hh  MyFinder.cc  MyFinder.hh  MyPanel.cc  MyPanel.hh  MyStack.cc  MyStack.hh  main.cc
Gtkmm4/gtk91_css_test/: CMakeLists.txt  build_mingw.cmd
Gtkmm4/gtk91_css_test/res/: gtk89.resource.xml
Gtkmm4/gtk91_css_test/src/: main.cc  resources.cpp
Gtkmm4/gtk93_fontdialog/: meson.build
Gtkmm4/gtk93_fontdialog/src/: MyWin.cc  main.cc
Linux64/: README.linux64
OpenCV_test/: CMakeLists.txt  main.cpp
OpenCV_test/test10_preprocess/: CMakeLists.txt  main.cpp
OpenCV_test/test1_openimage/: main.cpp
OpenCV_test/test2_colorconvert/: CMakeLists.txt  main.cpp
OpenCV_test/test3_imageobject/: main.cpp
OpenCV_test/test4_display/: CMakeLists.txt  main.cpp
OpenCV_test/test5_brightless/: CMakeLists.txt  main.cpp
OpenCV_test/test6_imagemask/: main.cpp
OpenCV_test/test7_threshold/: CMakeLists.txt  main.cpp
OpenCV_test/test8_random_color/: CMakeLists.txt  main.cpp
OpenCV_test/test9_imagecapture/: CMakeLists.txt  main.cpp
c/: Christmas_tree.c  args.c  xeinit5.c  xerelease4.c  xerelease5-x86.c  xerelease5.c
cargo_local_registry/: Cargo.toml
codeblocks/: default.conf
cpp/: 24game.cpp  README.xerelease  calc.cpp  cfgfile.cpp  cfgfile2.cpp  config.toml  core_voltage.cpp  get_factors.cpp  m4s_to_mp4.cpp  mydock_patcher.cpp  string_to_bin.cpp  toml_test  toml_test.cpp  xeinit.cpp  xeinit2.cpp  xeinit3.cpp  xeinit4.cpp  xeinit6.cpp  xeinit7.cpp  xeinit8.cpp  xerelease2.cpp
cpp/xeinit_glib/: CMakeLists.txt  main.c
ege/: README.ege  ege1.cpp  ege2.cpp  ege3.cpp  ege4.cpp  ege5.cpp
gtk2/: README.GTK2  gtk3.cpp  gtk4.c
icon-install/: install-icon.sh  org.gtk.daleclack.desktop
json_nlohmann/: ._json.hpp
mycpupower/: install.sh  mycpupower  mycpupower.service
public_src/: winpe.7z
rust_test/: README.md  test2.rs
termux/: Fs5_DOS-1.sh  pulseaudio-termux.sh  ram95.sh  ram95_4.sh  sdl-i3.sh  sdl.sh  sl1.sh  vncserver-start  w3pe103.sh  w3pe91.sh  w3pe98.sh  win8PEx64-7.sh  (+2 more)
(+1054 files in other folders)
