[package]
name = "cargo_local_registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.6", package = "gtk4", features = ["v4_6"]}
chrono = "0.4.9"
winapi-i686-pc-windows-gnu = "0.4.0"
